# sphero-swarm

./: .gitignore  README.md  Simulation in PyGame  Sphero_Swarm_Center.py  algorithmDriver.py  calibration_driver.py  constants.json  demo_controls.py  driver.py  gui_driver.py  gui_server.py  main.py  package-lock.json  pyproject.toml  requirements.txt  runall.py  sphero_driver.py
algorithms/: 3-sphero-test.py  README.md  Sphero PyGame Sim (Work in Progress)  Sphero Swarm Simulation2.py  Sphero Swarm Simulation7.py  algorithm.py  bonded_group.py  bonded_groups.py  constants.py  determine_bind.py  driver.py  error_correction.py  formInstruction.py  form_instruction.py  random_error_simulation.py  siddh_sphero.py  simulation.py  simulationtest.py  sphero-sim-grid.py  sphero-sim-w-grid.py  sphero.py  sphero_driver.py  swarm.py  test.py  test_bonded_group.py
controls/: 2025_Fall_Sphero_Swarm_Server.py  ControlsDocumentation.md  Controls_SS.py  Controls_Server.py  Controls_Test_Server.py  DNA.py  Fall_2025_Sphero_Swarm_Server.py  Instruction.py  New_method_server_commented.py  README.md  Sphero_Swarm_Test_Client.py  Strait_line_movement.py  Test  command_client_auto.py  command_client_auto_commented.py  commands-client.py  consumer_script.py  controlCenter.py  controls-server.py  controls-test-v1.py  controls.py  controls_apr14_v8e.py  controls_ss.py  curve_testing.py  determine_bind.py  discrete_wasd_multiball  driver2.py  functionalities.py  leader_and_follower.py  name_to_id.csv  name_to_location_dict.csv  new_controls_string.py  new_method.py  new_method_server.py  (+9 more)
(+133 files in other folders)
