[project]
name = "sphero-swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "bleak>=3.0.1",
    "depthai>=3.5.0",
    "flask>=3.1.3",
    "pupil-apriltags>=1.0.4.post11",
    "pygame>=2.6.1",
    "spherov2>=0.12.1",
    "ultralytics>=8.4.37",
    "websockets>=16.0",
    "zmq>=0.0.0",
]
